// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewMessageModal will receive right actions 1`] = `
Object {
  "showNotification": [Function],
}
`;

exports[`NewMessageModal will receive right props 1`] = `
Object {
  "users": Array [],
}
`;
